language/move-lang/tests/move_check/parser/byte_string_token_eof1.exp
error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/byte_string_token_eof1.move:3:9
  │
3 │         b"diem\"
  │         ^^^^^^^^ Missing closing quote (") after byte string

